# src/modules/attendant/dtos/ICallNextCustomerDTO.ts
@@ -1,0 +1,4 @@
+export default interface ICallNextCustomerDTO {
+  attendance_line_id: string;
+  withdraw_line_id: string;
+}
