# src/shared/routes.ts
@@ -1,3 +1,4 @@
+import attendantRoutes from "@modules/attendant/routes";
 import categoryRoutes from "@modules/category/routes/category.routes";
 import customerRoutes from "@modules/costumer/routes";
 import lineRoutes from "@modules/line/routes/line.routes";
@@ -12,5 +13,6 @@ routes.use("/customers", customerRoutes);
 routes.use("/lines", lineRoutes);
 routes.use("/categories", categoryRoutes);
 routes.use("/orders", orderRoutes);
+routes.use("/attendants", attendantRoutes);
 
 export default routes;
